# vi-stereo-v1

optor_VI_Sensor_SDK_V1.0/SDK/: CMakeLists.txt  optor_VISensor_Setups.txt
optor_VI_Sensor_SDK_V1.0/SDK/include/: optorcam.h
optor_VI_Sensor_SDK_V1.0/SDK/src/: camtest.cpp  optorcam.cpp  optorimu.cpp  optorusb.cpp
